# alias

./: .gitignore  Cargo.toml
migrations/2020-11-16-210408_create_aliases/: down.sql  up.sql
resources/: aliasd.conf  aliasd.service
src/: db.rs  lib.rs  model.rs  pass.rs
