[package]
name = "alias"
version = "0.1.0"
authors = ["Nick Samson <me@nicksamson.com>"]
license = "GPL"
edition = "2018"
description = "server for redirection"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "alias"
path = "src/lib.rs"

[[bin]]
name = "aliasd"
path = "src/bin/aliasd/main.rs"

[[bin]]
name = "alias-client"
path = "src/bin/alias_client/main.rs"

[profile.dev.package.rust-argon2]
opt-level = 3

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["sqlite"] }
diesel_migrations = "1.4.0"
libsqlite3-sys = { version = "~0.9", features = ["bundled"] }
tokio = { version = "0.2.23", features = ["full", "tracing"] }
futures = "0.3.8"
better-panic = "0.2.0"
dirs = "3.0.1"
once_cell = "1.5.2"
thread_local = "1.0.1"
thiserror = "1.0.22"
chrono = "0.4.19"
rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket", features = ["json", "helmet"] }
rand = "0.7.3"
rust-crypto = "0.2.36"
clap = "3.0.0-beta.2"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
anyhow = "1.0.34"
rpassword = "5.0.0"
rust-argon2 = "0.8.2"
jsonwebtoken = "7.2.0"
serde = { version = "1.0.117", features = ["derive"] }
crossbeam = "0.8.0"
url = "2.2.0"
serde_json = "1.0.59"
lru = "0.6.1"
reqwest = {version = "0.10.9", features = ["cookies", "rustls-tls", "json"], default-features = false}

[package.metadata.deb]
copyright = "2020, Nick Samson"
priority = "optional"
depends = "$auto"
maintainer-scripts = "resources/maintainer-scripts/"
assets = [
    ['target/release/aliasd', "usr/bin/", "755"],
    ['target/release/alias-client', "usr/bin/", "755"],
    ['resources/aliasd.conf', "etc/aliasd/aliasd.conf", "644"],
    ['resources/aliasd.service', 'etc/systemd/system/', "644"]
]

[package.metadata.deb.systemd-units]
unit-scripts = "resources/"
unit-name = "aliasd.service"
